--- a/denmacundefined/src/app/app.component.html
+++ b/denmacundefined/src/app/app.component.html
@@ -1,12 +1,11 @@
-<h1 i18n>Who am I ?</h1>
-<p i18n>I am a campion.</p>
-<h2 i18n>Don't you trust me ?</h2>
-<p i18n>Trust me, I am a jedi, not so happy than this man:</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fEoglL-wPuc?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p i18n>but I don't give up.</p>
-<h2 i18n>Don't you still beleave me ?</h2>
-<p i18n>so, look on it:</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/yX39J_YyKbs?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h2 i18n>Do you still here ?</h2>
-<p i18n>Don't spend your time and start doing your "fucking" dreams</p>
+<nav mat-tab-nav-bar>
+    <a mat-tab-link
+        *ngFor="let link of navLinks"
+        [routerLink]="['/' + link]"
+        routerLinkActive #rla="routerLinkActive"
+        [active]="rla.isActive">{{link}}
+    </a>
+</nav>
+  
+<router-outlet></router-outlet>
 
