--- a/denmacundefined/src/app/who-am-i/who-am-i.component.html
+++ b/denmacundefined/src/app/who-am-i/who-am-i.component.html
@@ -1,7 +1,29 @@
-<h1 i18n>Who am I ?</h1>
-<p i18n>I am a campion.</p>
-<h2 i18n>Don't you trust me ?</h2>
-<p i18n>so, look on it:</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/yX39J_YyKbs?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h2 i18n>Do you still here ?</h2>
-<p i18n>Don't spend your time and start doing your "fucking" dreams</p>
+<div class="container">
+    <div class="row justify-content-center">
+    <div class="col-lg-8 text-center">
+        <h2 class="text-white mt-0" i18n>Who am I ?</h2>
+        <hr class="divider light my-4">
+        <p class="text-white-50 mb-4" i18n>I am a campion!</p>
+        <ng-container *ngIf="!isVideoDone">
+            <h3 class="text-white mt-0" i18n>Don't you trust me ?</h3>
+            <p class="text-white-50 mb-4" i18n>so, look <a class="champion-link" (click)="openModal(template)" i18n>on it</a></p>
+        </ng-container>
+        <ng-container *ngIf="isVideoDone">
+            <h3 class="text-white mt-0" i18n>Do you still here ?</h3>
+            <p class="text-white-50 mb-4" i18n>Don't spend your time and start doing your "fucking" dreams</p>
+        </ng-container>
+        <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio" i18n>Look on my projects</a>
+    </div>
+    </div>
+</div>
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <iframe width="100%" 
+        height="315"
+        src="https://www.youtube.com/embed/yX39J_YyKbs?controls=0"
+        frameborder="0" 
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+  </div>
+</ng-template>
