added layout elements

--- a/denmacundefined/src/app/app.component.html
+++ b/denmacundefined/src/app/app.component.html
@@ -8,13 +8,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#whoami">Who I am</a>
+            <a class="nav-link js-scroll-trigger" href="#whoami" i18n>Who I am</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio" i18n>Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact" i18n>Contact</a>
           </li>
         </ul>
       </div>
@@ -26,12 +26,12 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Just a <s>good</s> person </h1>
+          <h1 class="text-uppercase text-white font-weight-bold" i18n>Just a <s i18n>good</s> person </h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Amazing JavaScript evangelist, and sometimes a dreamer...</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#whoami">Find Out More</a>
+          <p class="text-white-75 font-weight-light mb-5" i18n>JavaScript evangelist, and sometimes a dreamer...</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#whoami" i18n>Find Out More</a>
         </div>
       </div>
     </div>
@@ -50,8 +50,8 @@
   <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
-      <h2 class="mb-4">Smart Place (IoT DIY and CMS platform)</h2>
-      <a class="btn btn-light btn-xl" href="http://smart-place.denmacundefined.pp.ua">See now!</a>
+      <h2 class="mb-4" i18n>Smart Place (IoT DIY and CMS platform)</h2>
+      <a class="btn btn-light btn-xl" href="http://smart-place.denmacundefined.pp.ua" i18n>See now!</a>
     </div>
   </section>
 
@@ -63,7 +63,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Created by <a href="#whoami">Den MacUndefined</a> in 2019 year</div>
+      <div class="small text-center text-muted" i18n>Created by <a href="#whoami">Den MacUndefined</a> in 2019 year</div>
     </div>
   </footer>
 
