--- a/denmacundefined/src/app/contact/contact.component.html
+++ b/denmacundefined/src/app/contact/contact.component.html
@@ -1,15 +1,27 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-8 text-center">
-      <h2 class="mt-0">Let's Get In Touch!</h2>
+      <h2 class="mt-0" i18n>Where can you find me ?</h2>
       <hr class="divider my-4">
-      <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+      <p class="text-muted mb-5" i18n>You can do it by these links:</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-4 mr-auto text-center">
-      <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-      <a class="d-block" href="mailto:denmacundefined@gmail.com">denmacundefined@gmail.com</a>
+    <div class="col-lg-2 ml-auto text-center">
+      <i class="fab fa-skype fa-3x mb-3 text-muted"></i>
+      <a class="d-block" href="skype:denmacundefined">Skype</a>
+    </div>
+    <div class="col-lg-2 text-center">
+      <i class="fab fa-instagram fa-3x mb-3 text-muted"></i>
+      <a class="d-block" href="https://www.instagram.com/denmacundefined/">Instagram</a>
+    </div>
+    <div class="col-lg-2 text-center">
+      <i class="fab fa-facebook-square fa-3x mb-3 text-muted"></i>
+      <a class="d-block" href="https://www.facebook.com/denmacundefined">Facebook</a>
+    </div>
+    <div class="col-lg-2 mr-auto text-center">
+      <i class="fab fa-github fa-3x mb-3 text-muted"></i>
+      <a class="d-block" href="https://github.com/denmacundefined">GitHub</a>
     </div>
   </div>
 </div>
