--- a/denmacundefined/src/app/projects/projects.component.html
+++ b/denmacundefined/src/app/projects/projects.component.html
@@ -1,78 +1,12 @@
 <div class="container-fluid p-0">
     <div class="row no-gutters">
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/assets/img/portfolio/fullsize/1.jpg" title="www.smart-watcher.denmacundefined.pp.ua">
-            <img class="img-fluid" src="/assets/img/portfolio/thumbnails/1.jpg" alt="">
+        <div class="col-lg-4 col-sm-6" *ngFor="let project of projects">
+            <a class="portfolio-box" href="/assets/img/portfolio/fullsize/{{project.photoNumber}}.jpg" title="http://{{project.link}}">
+            <img class="img-fluid" src="/assets/img/portfolio/thumbnails/{{project.photoNumber}}.jpg" alt="">
             <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                    <a (click)="visit('http://smart-watcher.denmacundefined.pp.ua', $event)">www.smart-watcher.denmacundefined.pp.ua</a>
-                </div>
-                <div class="project-name">Smart Watcher</div>
-            </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/assets/img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="/assets/img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                Category
-                </div>
-                <div class="project-name">
-                Project Name
-                </div>
-            </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/assets/img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="/assets/img/portfolio/thumbnails/3.jpg" alt="">
-            <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                Category
-                </div>
-                <div class="project-name">
-                Project Name
-                </div>
-            </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/assets/img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="/assets/img/portfolio/thumbnails/4.jpg" alt="">
-            <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                Category
-                </div>
-                <div class="project-name">
-                Project Name
-                </div>
-            </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/assets/img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="/assets/img/portfolio/thumbnails/5.jpg" alt="">
-            <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                Category
-                </div>
-                <div class="project-name">
-                Project Name
-                </div>
-            </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/assets/img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="/assets/img/portfolio/thumbnails/6.jpg" alt="">
-            <div class="portfolio-box-caption p-3">
-                <div class="project-category text-white-50">
-                Category
-                </div>
-                <div class="project-name">
-                Project Name
-                </div>
+                <div class="project-category text-white-50"
+                      (click)="visit(project.link, $event)">{{project.link}}</div>
+                <div class="project-name">{{project.name}}</div>
             </div>
             </a>
         </div>
