--- a/denmacundefined/src/app/who-am-i/who-am-i.component.html
+++ b/denmacundefined/src/app/who-am-i/who-am-i.component.html
@@ -6,7 +6,10 @@
         <p class="text-white-50 mb-4" i18n>I am a campion!</p>
         <ng-container *ngIf="!isVideoDone">
             <h3 class="text-white mt-0" i18n>Don't you trust me ?</h3>
-            <p class="text-white-50 mb-4" i18n>so, look <a class="champion-link" (click)="openModal(template)" i18n>on it</a></p>
+            <p class="text-white-50 mb-4">
+              <span i18n>so, look </span>
+              <a class="champion-link" (click)="openModal(template)" i18n>on it</a>
+            </p>
         </ng-container>
         <ng-container *ngIf="isVideoDone">
             <h3 class="text-white mt-0" i18n>Do you still here ?</h3>
