--- a/denmacundefined/src/app/app.component.html
+++ b/denmacundefined/src/app/app.component.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#whoami" i18n>Who I am</a>
+            <a class="nav-link js-scroll-trigger" href="#twitter" i18n>Twitter</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio" i18n>Projects</a>
@@ -33,18 +33,18 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5" i18n>JavaScript evangelist, and sometimes a dreamer...</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#whoami" i18n>Find Out More</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#twitter" i18n>Find Out More</a>
         </div>
       </div>
     </div>
   </header>
 
   <!-- Who am I Section -->
-  <section class="page-section bg-primary" id="whoami">
-    <app-who-am-i> </app-who-am-i>
+  <section class="page-section bg-primary" id="twitter">
+    <twitter> </twitter>
   </section> 
 
-  <!-- Porojects Section -->
+  <!-- Projects Section -->
   <section id="portfolio">
     <app-projects> </app-projects>
   </section>
@@ -52,8 +52,10 @@
   <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
-      <h2 class="mb-4" i18n>Smart Place (IoT DIY and CMS platform)</h2>
-      <a class="btn btn-light btn-xl" href="http://smart-place.denmacundefined.pp.ua" i18n>See now!</a>
+      <ng-template ngFor let-action [ngForOf]="actions">
+        <h2 class="mb-4">{{action.text}}</h2>
+        <a class="btn btn-light btn-xl" href="{{action.link}}">{{action.link}}</a> 
+      </ng-template>
     </div>
   </section>
 
@@ -65,7 +67,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted" i18n>Created by <a href="#whoami">Den MacUndefined</a> in 2019 year</div>
+      <div class="small text-center text-muted" i18n>Created by <a href="#contact">Den MacUndefined</a> in 2019 year</div>
     </div>
   </footer>
 
