--- a/denmacundefined/src/app/contact/contact.component.html
+++ b/denmacundefined/src/app/contact/contact.component.html
@@ -19,6 +19,10 @@
       <i class="fab fa-facebook-square fa-3x mb-3 text-muted"></i>
       <a class="d-block" href="https://www.facebook.com/denmacundefined">Facebook</a>
     </div>
+    <div class="col-lg-2 text-center">
+      <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
+      <a class="d-block" href="https://www.linkedin.com/in/denysm/">LinkedIn</a>
+    </div>
     <div class="col-lg-2 mr-auto text-center">
       <i class="fab fa-github fa-3x mb-3 text-muted"></i>
       <a class="d-block" href="https://github.com/denmacundefined">GitHub</a>
