--- a/denmacundefined/src/styles.scss
+++ b/denmacundefined/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.page-section.bg-dark.text-white {
+    padding: 5rem 0;;
+}
